--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">MovieDb</string>
     <string name="base_url">https://api.themoviedb.org/</string>
     <string name="api_key">267f6c03dccb4096c3b41afeb9ac7d26</string>
-
+    <string name="movie_id">movie_id</string>
 
 </resources>
